# fastmcp_otel_middleware

./: .gitignore  INVESTIGATION.md  Makefile  README.md  __init__.py  middleware.py  pyproject.toml  setup.py  test_attribute_export.py  test_tool_name_issue.py
.github/workflows/: ci.yml
fastmcp_otel_middleware/: middleware.py
tests/: __init__.py  conftest.py  test_fastmcp_integration.py  test_middleware.py
tests/_otel_stub/opentelemetry/: __init__.py
tests/_otel_stub/opentelemetry/context/: __init__.py
tests/_otel_stub/opentelemetry/propagate/: __init__.py
tests/_otel_stub/opentelemetry/propagators/: __init__.py
tests/_otel_stub/opentelemetry/propagators/textmap/: __init__.py
tests/_otel_stub/opentelemetry/sdk/: __init__.py
tests/_otel_stub/opentelemetry/sdk/trace/: __init__.py
tests/_otel_stub/opentelemetry/sdk/trace/export/: __init__.py  in_memory_span_exporter.py
tests/_otel_stub/opentelemetry/trace/: __init__.py
tests/_otel_stub/opentelemetry/trace/propagation/: __init__.py  tracecontext.py
