[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-otel-middleware"
version = "0.1.0"
description = "OpenTelemetry middleware for FastMCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.7.0",
    "fastmcp>=2.9.0",  # For integration tests
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fastmcp_otel_middleware*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
fastmcp_otel_middleware = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark tests that use asyncio helpers",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
